WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283819
REGRESSION(
287118@main
): [Debug][GStreamer] ASSERTION FAILED: other.underlyingStringIsValid() in WebRTC tests.
https://bugs.webkit.org/show_bug.cgi?id=283819
Summary
REGRESSION(287118@main): [Debug][GStreamer] ASSERTION FAILED: other.underlyin...
Vitaly Dyackhov
Reported
2024-11-29 03:59:30 PST
#0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:365 #1 0x00007fbb9835b623 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:913 #2 0x00007fbb98b1c69f in WTF::StringView::StringView(WTF::StringView const&) (this=0x7ffd9ad1a040, other=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/text/StringView.h:346 #3 0x00007fbb992b8520 in WTF::StringView::split(char16_t) const (this=0x7ffd9ad1a0f0, separator=32 u' ') at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/text/StringView.h:1087 #4 0x00007fbb9cc87efc in WebCore::parseIceCandidateSDP(WTF::String const&) (sdp=...) at /app/webkit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:324 #5 0x00007fbb9cba4624 in WebCore::RTCIceCandidate::create(WebCore::RTCIceCandidateInit const&) (dictionary=...) at /app/webkit/Source/WebCore/Modules/mediastream/RTCIceCandidate.cpp:59 #6 0x00007fbb9bc8f82f in WebCore::JSDOMConstructor<WebCore::JSRTCIceCandidate>::construct(JSC::JSGlobalObject*, JSC::CallFrame*) (lexicalGlobalObject=0x7fb9eec90500, callFrame=0x7ffd9ad1a430) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSRTCIceCandidate.cpp:131 #7 0x00007fb9f000c3e7 in () #8 0x00007ffd9ad1a4d0 in () #9 0x00007fbb88722d6a in op_construct_return_location () at /app/webkit/WebKitBuild/GTK/Debug/lib/libjavascriptcoregtk-6.0.so.1 #10 0x0000000000000000 in ()
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-11-29 04:04:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37249
EWS
Comment 2
2024-11-29 07:24:30 PST
Committed
287166@main
(54ba147b16d6): <
https://commits.webkit.org/287166@main
> Reviewed commits have been landed. Closing PR #37249 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-29 07:25:16 PST
<
rdar://problem/140697085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug