REGRESSION(287118@main): [Debug][GStreamer] ASSERTION FAILED: other.underlyingStringIsValid() in WebRTC tests. https://bugs.webkit.org/show_bug.cgi?id=283819

Reviewed by Philippe Normand and Adrian Perez de Castro.

`StringView`` does not capture the underlying string. We should store
the result of `sdp.convertToASCIILowercase()` in a separte variable.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::parseIceCandidateSDP):

Canonical link: https://commits.webkit.org/287166@main